// Copyright 2019 The Flutter Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package recipes.flutter.engine.engine_license;

message InputProperties {
  string goma_jobs = 1;
}

message EnvProperties {
  string SWARMING_TASK_ID = 1;
}
